deploy/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novuslang-website
  namespace: novus
  labels:
    app: novuslang-website
    app.kubernetes.io/name: novuslang-website
    app.kubernetes.io/component: website
    app.kubernetes.io/part-of: novus-lang
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: novuslang-website
