deploy/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novuslang-website
  namespace: novus
  labels:
    app: novuslang-website
    app.kubernetes.io/name: novuslang-website
    app.kubernetes.io/component: website
    app.kubernetes.io/part-of: novus-lang
spec:
  ingressClassName: traefik
  rules:
    - host: novuslang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novuslang-website
                port:
                  number: 80
    - host: www.novuslang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novuslang-website
                port:
                  number: 80
